--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^7.2.10",
     "@reduxjs/toolkit": "^2.8.1",
+    "apisauce": "^2.1.6",
     "axios": "^1.9.0",
     "expo": "~52.0.46",
     "expo-status-bar": "^2.2.3",
@@ -25,7 +26,8 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "redux-saga": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
